verif/test/deca/syntax/invalid/loop-without-body-verif.res
src/test/deca/syntax/invalid/loop-without-body.deca:10:16: missing '{' at ';'
